@@ -1,5 +1,10 @@
 Release history for xiate
 
+next
+  [Added]
+  - When the mouse pointer hovers over an explicit hyperlink, xiate now
+    shows a tooltip window that displays the link's target.
+
 v18.03  2018-03-17
   [Changed]
   - It is no longer possible to set handler paths in config.h to NULL.
